k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reeldev
  labels:
    app.kubernetes.io/part-of: reeldev-dev
    capsule.clastix.io/tenant: dev
