k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: reeldev-dev
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv6
    - IPv4
  selector:
    app: api
  ports:
    - port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: reeldev-dev
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv6
    - IPv4
  selector:
    app: frontend
  ports:
    - port: 3030
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: reeldev-dev
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv6
    - IPv4
  selector:
    app: admin
  ports:
    - port: 3002
      targetPort: 3002
