k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reeldev-main
  namespace: reeldev-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: dev.reeldev.jp
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3001
      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3030
  tls:
  - hosts:
    - reeldev.jp
    secretName: reeldev-devmain-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reeldev-admin
  namespace: reeldev-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: traefik
  rules:  
  - host: admindev.reeldev.jp
    http:
      paths:
      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin
            port:
              number: 3002
  tls:
  - hosts:
    - admindev.reeldev.jp
    secretName: reeldev-admindev-tls
